--- a/index.html
+++ b/index.html
@@ -1,35 +1,201 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MRPack to ZIP Converter</title>
-    <link rel="stylesheet" href="css/style.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <title>MRPACK to ZIP Converter</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+    <style>
+        body {
+            font-family: 'Inter', sans-serif;
+            background-color: #f5f5f5;
+            margin: 0;
+            padding: 20px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+        }
+        .container {
+            background-color: white;
+            border-radius: 8px;
+            padding: 30px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            max-width: 500px;
+            width: 100%;
+        }
+        h1 {
+            color: #333;
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        .drop-area {
+            border: 2px dashed #ccc;
+            border-radius: 8px;
+            padding: 20px;
+            text-align: center;
+            margin-bottom: 20px;
+            transition: background-color 0.3s;
+        }
+        .drop-area.dragover {
+            background-color: #e9e9e9;
+        }
+        .buttons {
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 20px;
+        }
+        .btn {
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            border-radius: 4px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+        .btn:hover {
+            background-color: #45a049;
+        }
+        .btn:disabled {
+            background-color: #cccccc;
+            cursor: not-allowed;
+        }
+        #progressBar {
+            width: 100%;
+            height: 20px;
+            background-color: #f0f0f0;
+            border-radius: 10px;
+            margin-bottom: 20px;
+            overflow: hidden;
+            display: none;
+        }
+        #progressFill {
+            height: 100%;
+            background-color: #4CAF50;
+            width: 0%;
+            transition: width 0.3s;
+        }
+        #downloadBtn {
+            display: none;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <h1>MRPack to ZIP Converter</h1>
-    </header>
-    <main>
-        <div id="drop-zone">
-            <p>Перетащите .mrpack файл сюда или</p>
-            <input type="file" id="file-input" accept=".mrpack">
-            <label for="file-input" class="button">Выберите файл</label>
+    <div class="container">
+        <h1>MRPACK to ZIP Converter</h1>
+        <div id="dropArea" class="drop-area">
+            <p>Drag & drop your .mrpack file here or click to select</p>
+            <input type="file" id="fileInput" accept=".mrpack" style="display: none;">
         </div>
-        <div id="actions">
-            <button id="convert-btn" class="button" disabled>Конвертировать</button>
-            <button id="download-btn" class="button" disabled>Скачать ZIP</button>
+        <div class="buttons">
+            <button class="btn" onclick="window.open('https://modrinth.com/', '_blank')">Modrinth</button>
+            <button class="btn" onclick="window.open('https://www.curseforge.com/', '_blank')">CurseForge</button>
         </div>
-        <div id="progress-bar" class="hidden">
-            <div id="progress"></div>
+        <button id="convertBtn" class="btn" disabled>Convert</button>
+        <div id="progressBar">
+            <div id="progressFill"></div>
         </div>
-        <div id="external-links">
-            <a href="#" class="button" target="_blank">Скачать MRPack файлы</a>
-            <a href="#" class="button" target="_blank">Альтернативный источник</a>
-        </div>
-    </main>
-    <script type="module" src="js/main.js"></script>
+        <button id="downloadBtn" class="btn">Download ZIP</button>
+    </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.7.1/jszip.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <script>
+        const dropArea = document.getElementById('dropArea');
+        const fileInput = document.getElementById('fileInput');
+        const convertBtn = document.getElementById('convertBtn');
+        const downloadBtn = document.getElementById('downloadBtn');
+        const progressBar = document.getElementById('progressBar');
+        const progressFill = document.getElementById('progressFill');
+
+        let selectedFile = null;
+
+        dropArea.addEventListener('dragover', (e) => {
+            e.preventDefault();
+            dropArea.classList.add('dragover');
+        });
+
+        dropArea.addEventListener('dragleave', () => {
+            dropArea.classList.remove('dragover');
+        });
+
+        dropArea.addEventListener('drop', (e) => {
+            e.preventDefault();
+            dropArea.classList.remove('dragover');
+            const file = e.dataTransfer.files[0];
+            handleFile(file);
+        });
+
+        dropArea.addEventListener('click', () => {
+            fileInput.click();
+        });
+
+        fileInput.addEventListener('change', (e) => {
+            const file = e.target.files[0];
+            handleFile(file);
+        });
+
+        function handleFile(file) {
+            if (file && file.name.endsWith('.mrpack')) {
+                selectedFile = file;
+                dropArea.textContent = `Selected file: ${file.name}`;
+                convertBtn.disabled = false;
+            } else {
+                Toastify({
+                    text: "Please select a valid .mrpack file",
+                    duration: 3000,
+                    gravity: "top",
+                    position: 'right',
+                    backgroundColor: "#ff4444"
+                }).showToast();
+            }
+        }
+
+        convertBtn.addEventListener('click', () => {
+            if (selectedFile) {
+                convertMrpackToZip(selectedFile);
+            }
+        });
+
+        function convertMrpackToZip(mrpackFile) {
+            const worker = new Worker('worker.js');
+
+            worker.onmessage = function(e) {
+                if (e.data.progress) {
+                    updateProgress(e.data.progress);
+                } else if (e.data.zipBlob) {
+                    const zipBlob = e.data.zipBlob;
+                    downloadBtn.onclick = () => {
+                        const url = URL.createObjectURL(zipBlob);
+                        const a = document.createElement('a');
+                        a.href = url;
+                        a.download = mrpackFile.name.replace('.mrpack', '.zip');
+                        document.body.appendChild(a);
+                        a.click();
+                        document.body.removeChild(a);
+                        URL.revokeObjectURL(url);
+                    };
+                    downloadBtn.style.display = 'block';
+                    Toastify({
+                        text: "Conversion complete!",
+                        duration: 3000,
+                        gravity: "top",
+                        position: 'right',
+                        backgroundColor: "#4CAF50"
+                    }).showToast();
+                }
+            };
+
+            worker.postMessage({ mrpackFile });
+            progressBar.style.display = 'block';
+            convertBtn.disabled = true;
+        }
+
+        function updateProgress(progress) {
+            progressFill.style.width = `${progress}%`;
+        }
+    </script>
 </body>
 </html>
