--- a/index.html
+++ b/index.html
@@ -25,9 +25,16 @@
         </div>
         <button id="downloadButton" disabled>Download Zip</button>
     </div>
+    <div id="loading-modal" class="modal">
+        <div class="modal-content">
+            <p>Загрузка...</p>
+        </div>
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.7.1/jszip.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
     <script src="script.js"></script>
+    <div id="loading-modal" class="modal">
+</div>
 </body>
 </html>
