--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
-<div class="container"> 
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Mrpack to Zip Converter</title>
+  <link rel="stylesheet" href="styles.css"> 
+</head>
+<body>
+  <div class="container"> 
   <h1>Mrpack to Zip Converter</h1>
 
   <div id="drop-area">
@@ -18,3 +25,6 @@
     </div>
   </div>
 </div>
+  <script src="converter.js"></script> 
+</body>
+</html>
