--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Mrpack to Zip Converter</title>
-  <link rel="stylesheet" href="styles.css"> 
+  <link rel="stylesheet" href="assets/css/styles.css"> 
 </head>
 <body>
   <div class="container"> 
@@ -25,6 +25,6 @@
     </div>
   </div>
 </div>
-  <script src="converter.js"></script> 
+  <script src="assets/js/converter.js"></script> 
 </body>
 </html>
