--- a/index.html
+++ b/index.html
@@ -1,30 +1,332 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
-  <title>Mrpack to Zip Converter</title>
-  <link rel="stylesheet" href="assets/css/styles.css"> 
+    <meta charset="UTF-8">
+    <title>Mrpack to Zip Converter</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+        }
+
+        .container {
+            background-color: white;
+            padding: 2rem;
+            border-radius: 8px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            text-align: center;
+            max-width: 500px;
+            width: 100%;
+        }
+
+        h1 {
+            color: #30b27b;
+            margin-bottom: 1.5rem;
+        }
+
+        #drop-area {
+            border: 2px dashed #30b27b;
+            border-radius: 8px;
+            padding: 2rem;
+            margin-bottom: 1rem;
+            cursor: pointer;
+            position: relative;
+        }
+
+        #drop-area.highlight {
+            background-color: #e6f7f0;
+        }
+
+        #drop-area input {
+            display: none;
+        }
+
+        .file-msg {
+            color: #30b27b;
+            margin-top: 1rem;
+            font-weight: bold;
+        }
+
+        .completion-msg {
+            color: #30b27b;
+            margin-top: 1rem;
+            font-weight: bold;
+        }
+
+        #buttons {
+            display: flex;
+            justify-content: center;
+            gap: 1rem;
+            margin: 1rem 0;
+        }
+
+        button, .site-button {
+            background-color: #30b27b;
+            color: white;
+            border: none;
+            padding: 0.5rem 1rem;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 1rem;
+            transition: background-color 0.3s;
+            text-decoration: none;
+            display: inline-block;
+        }
+
+        button:hover, .site-button:hover {
+            background-color: #268d61;
+        }
+
+        button:disabled {
+            background-color: #a0a0a0;
+            cursor: not-allowed;
+        }
+
+        .site-button {
+            background-color: #f0f0f0;
+            color: #333;
+        }
+
+        .site-button:hover {
+            background-color: #e0e0e0;
+            color: #333;
+        }
+
+        .progress-bar {
+            width: 100%;
+            height: 20px;
+            background-color: #f0f0f0;
+            border-radius: 10px;
+            margin: 1rem 0;
+            overflow: hidden;
+        }
+
+        .progress-fill {
+            height: 100%;
+            background-color: #30b27b;
+            width: 0;
+            transition: width 0.3s ease-in-out;
+        }
+
+        /* Modal Styles */
+        .modal {
+            display: none; /* Hidden by default */
+            position: fixed; /* Stay in place */
+            z-index: 1000; /* Sit on top */
+            left: 0;
+            top: 0;
+            width: 100%; /* Full width */
+            height: 100%; /* Full height */
+            overflow: auto; /* Enable scroll if needed */
+            background-color: rgba(0,0,0,0.5); /* Black w/ opacity */
+            justify-content: center;
+            align-items: center;
+        }
+
+        .modal.is-active {
+            display: flex;
+        }
+
+        .modal-content {
+            background-color: white;
+            padding: 2rem;
+            border-radius: 8px;
+            text-align: center;
+            width: 80%;
+            max-width: 400px;
+        }
+
+    </style>
 </head>
 <body>
-  <div class="container"> 
-  <h1>Mrpack to Zip Converter</h1>
 
-  <div id="drop-area">
-    <input type="file" id="file-input" accept=".mrpack" hidden>
-    <span>Drag and drop your .mrpack file here or</span><br>
-    <button onclick="document.getElementById('file-input').click()">Select File</button>
-    <p id="file-name"></p> </div>
+    <div class="container">
+        <h1>Mrpack to Zip Converter</h1>
+        <div id="drop-area">
+            <form class="my-form">
+                <p>Drag and drop your .mrpack file here or</p>
+                <input type="file" id="file-input" accept=".mrpack">
+                <button type="button" id="select-button">Select File</button>
+            </form>
+            <p id="file-name" class="file-msg">No file selected</p>
+        </div>
 
-  <div id="buttons">
-    <button onclick="downloadPack()" disabled>Convert to Zip</button>
-  </div>
+        <div id="buttons">
+            <button id="convert-button" disabled>Convert to Zip</button>
+            <a href="#" class="site-button" target="_blank">Modrinth</a>
+            <a href="#" class="site-button" target="_blank">CurseForge</a>
+        </div>
 
-  <div id="loading-modal" class="modal">
-    <div class="modal-background"></div>
-    <div class="modal-content">
-      <progress id="loading-progress" value="0" max="100"></progress>
+        <p id="completion-message" class="completion-msg" style="display: none;">Conversion Complete!</p>
     </div>
-  </div>
-</div>
-  <script src="assets/js/converter.js"></script> 
+
+    <!-- Loading Modal -->
+    <div id="loading-modal" class="modal">
+        <div class="modal-content">
+            <h2>Loading...</h2>
+            <div class="progress-bar">
+                <div id="loading-progress" class="progress-fill"></div>
+            </div>
+        </div>
+    </div>
+
+    <!-- JSZip and FileSaver Libraries -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js" integrity="sha512-7AWz8HhVtruM/KkbsiQp0KKNLdeq4a3vyaig7wdzqwgVQO/8dpLQlFw1tVvszef3iFUtEtoN+h63PWaCIIB3qA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js" integrity="sha512-5D0PVuEdxXhZHZniRvD0qcFKCP6NfJPE8BTfCzwAl3QXHev42HpVWcM2uI/nlDPWBVrJOYQSX0eoi4g3a6K2Ew==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+    <script>
+        // Получение элементов
+        const modal = document.getElementById("loading-modal");
+        const progressFill = document.getElementById("loading-progress");
+        const fileInput = document.getElementById("file-input");
+        const fileName = document.getElementById("file-name");
+        const selectButton = document.getElementById("select-button");
+        const convertButton = document.getElementById("convert-button");
+        const dropArea = document.getElementById("drop-area");
+        const completionMessage = document.getElementById("completion-message");
+
+        // Функция обновления имени файла
+        function updateFileName() {
+            if (fileInput.files.length > 0) {
+                fileName.textContent = fileInput.files[0].name;
+                convertButton.disabled = false;
+                completionMessage.style.display = "none";
+            } else {
+                fileName.textContent = "No file selected";
+                convertButton.disabled = true;
+            }
+        }
+
+        // Обработчик выбора файла через кнопку
+        selectButton.addEventListener("click", () => {
+            fileInput.click();
+        });
+
+        // Обработчик изменения файла
+        fileInput.addEventListener("change", updateFileName);
+
+        // Обработчики Drag & Drop
+        ;['dragenter', 'dragover'].forEach(eventName => {
+            dropArea.addEventListener(eventName, (e) => {
+                e.preventDefault();
+                e.stopPropagation();
+                dropArea.classList.add('highlight');
+            }, false);
+        });
+
+        ;['dragleave', 'drop'].forEach(eventName => {
+            dropArea.addEventListener(eventName, (e) => {
+                e.preventDefault();
+                e.stopPropagation();
+                dropArea.classList.remove('highlight');
+            }, false);
+        });
+
+        dropArea.addEventListener('drop', (e) => {
+            const dt = e.dataTransfer;
+            const files = dt.files;
+            if (files.length > 0) {
+                fileInput.files = files;
+                updateFileName();
+            }
+        });
+
+        // Функция скачивания пакета
+        async function downloadPack() {
+            if (fileInput.files.length <= 0) {
+                return;
+            }
+
+            // Показать модальное окно
+            modal.classList.add("is-active");
+
+            // Начать создание нового zip-файла
+            const newZip = new JSZip();
+
+            try {
+                // Загрузка исходного zip-файла
+                const zip = await JSZip.loadAsync(fileInput.files[0]);
+
+                // Чтение манифеста
+                const manifestRaw = await zip.files['modrinth.index.json'].async('string');
+                const manifest = JSON.parse(manifestRaw);
+
+                // Копирование необходимых файлов
+                for (const fileNameInZip in zip.files) {
+                    const file = zip.files[fileNameInZip];
+                    if (file.dir) continue;
+
+                    if (file.name.startsWith("overrides/")) {
+                        const properFileName = file.name.substring("overrides/".length);
+                        newZip.file(properFileName, await file.async('blob'));
+                    }
+
+                    if (file.name.startsWith("client-overrides/")) {
+                        const properFileName = file.name.substring("client-overrides/".length);
+                        newZip.file(properFileName, await file.async('blob'));
+                    }
+                }
+
+                let totalFileSize = 0;
+                let downloaded = 0;
+
+                for (const file of manifest.files) {
+                    totalFileSize += file.fileSize;
+                }
+
+                progressFill.style.width = '0%';
+                progressFill.parentElement.style.width = '100%';
+                progressFill.parentElement.style.backgroundColor = '#f0f0f0';
+                progressFill.style.backgroundColor = '#30b27b';
+
+                const filePromises = [];
+
+                for (const file of manifest.files) {
+                    if (file.env.client !== 'required') {
+                        continue;
+                    }
+
+                    const promise = fetch(file.downloads[0])
+                        .then(response => {
+                            if (!response.ok) throw new Error(`Failed to download ${file.path}`);
+                            return response.blob();
+                        })
+                        .then(blob => {
+                            newZip.file(file.path, blob);
+                            downloaded += file.fileSize;
+                            const progressPercent = (downloaded / totalFileSize) * 100;
+                            progressFill.style.width = `${progressPercent}%`;
+                        });
+
+                    filePromises.push(promise);
+                }
+
+                await Promise.all(filePromises);
+
+                const content = await newZip.generateAsync({ type: "blob" });
+                saveAs(content, `${manifest['name']}-${manifest['versionId']}.zip`);
+
+                // Закрыть модальное окно
+                modal.classList.remove("is-active");
+
+                // Показать сообщение о завершении
+                completionMessage.style.display = "block";
+
+            } catch (error) {
+                console.error("Ошибка при конвертации:", error);
+                alert("Произошла ошибка при конвертации файла.");
+                modal.classList.remove("is-active");
+            }
+        }
+
+        // Привязка функции к кнопке конвертации
+        convertButton.addEventListener("click", downloadPack);
+    </script>
 </body>
 </html>
