--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
     </div>
 
     <!-- JSZip and FileSaver Libraries -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js" integrity="sha512-7AWz8HhVtruM/KkbsiQp0KKNLdeq4a3vyaig7wdzqwgVQO/8dpLQlFw1tVvszef3iFUtEtoN+h63PWaCIIB3qA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js" integrity="sha512-5D0PVuEdxXhZHZniRvD0qcFKCP6NfJPE8BTfCzwAl3QXHev42HpVWcM2uI/nlDPWBVrJOYQSX0eoi4g3a6K2Ew==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
 
     <script>
         // Получение элементов
