--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Mrpack to Zip Converter</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -159,8 +160,8 @@
 
         <div id="buttons">
             <button id="convert-button" disabled>Convert to Zip</button>
-            <a href="#" class="site-button" target="_blank">Modrinth</a>
-            <a href="#" class="site-button" target="_blank">CurseForge</a>
+            <a href="https://modrinth.com/modpack/beautiful-optimized" class="site-button" target="_blank">Beautiful Optimized</a>
+            <a href="https://modrinth.com/modpack/mc-te-port" class="site-button" target="_blank">MC:TE Port</a>
         </div>
 
         <p id="completion-message" class="completion-msg" style="display: none;">Conversion Complete!</p>
